# ai-physicist

./: .gitignore  Cargo.toml  TODO.md  environment.yml  knowledge.txt  memory.json  pyproject.toml  readme.md  requirements.txt
.github/workflows/: python-package-conda.yml
data/: a_knowledge.txt  a_memory.json  a_specific_model.json  b_knowledge.txt  b_memory.json  b_specific_model.json  knowledge.txt  knowledge0.txt  knowledge2.txt  knowledge3.txt  knowledge4.txt  memory.json  memory0.json  memory2.json  memory3.json  memory4.json
python/: ai_physicist.pyi  dataplot.py  debug.ipynb  debug2.ipynb  debug3.ipynb  debug4.ipynb  debug_maple.ipynb  interface.py  main.py  memory.py  object_model.py  show_docstring.ipynb  specific_model.py  test1.ipynb  test1.py  test10.py  test2.ipynb  test2.py  test3.ipynb  test3.py  test4.ipynb  test4.py  test5.ipynb  test5.py  test6.ipynb  test6.py  test7.ipynb  test7.py  test8.py  test9.py  test_diffalg.ipynb  test_pyi.py  ucb.py
python/diffalg/: diffalg.py  expr_manipulate.py  mapleIO.py
python/diffalg/test_maple/: maple_bug.mpl  test_0.mpl  test_1.mpl  (+12 more)
src/: ast.rs  ast_display.rs  complexity.rs  expr.lalrpop  exprcharacter.rs  expstructure.lalrpop  impl_for_pyo3.rs  knowledge.rs  lib.rs  macros.rs  main.rs  parsing.rs  regression.rs  sentence.rs
src/expdata/: constdata.rs  expdata.rs  normaldata.rs  topy.rs
src/experiments/: constdata.rs  expdata.rs  expstructure.rs  impl_for_pyo3.rs  normaldata.rs  topy.rs
src/test/: test_experiments.rs
tmp/: collision.html  da_dvd_dx.html  delta_v_square.html  oscillation.html  out.html
(+9 files in other folders)
