[package]
name = "ai-physicist"
version = "0.1.0"
edition = "2021"

[build-dependencies]
lalrpop = "0.20.2"

[lib]
name = "ai_physicist"
crate-type = ["cdylib"]

[dependencies]
lalrpop-util = { version = "0.20.2", features = ["lexer"] }
ndarray = "0.15.6"
ndarray-linalg = { version = "0.16.0", features = ["openblas"] }
plotly = "0.9.0"
pyo3 = "0.22.2"
rand = "0.8.5"
rand_distr = "0.4.3"
statrs = "0.17.1"
symbolica = "0.8.0"
